# ardaku

./: .gitignore  CHANGELOG.md  Cargo.toml  FILESYSTEM.md  README.md  SYSCALLS.md  example.wat  input.md
cargo-ardaku/: Cargo.toml  README.md
daku/: Cargo.toml  README.md  wasm32-ardaku.json
daku/src/: lib.rs
dive-kernel/: Cargo.toml  README.md
dive-kernel/examples/: vg.rs
dive-kernel/src/: data.rs  lib.rs
dive-kernel/src/emu/: x86.rs
examples/: demo.rs  vg.rs
hello/: Cargo.toml  build.sh
hello/.cargo/: config.toml
hello/src/: mod.rs
rdaku/: Cargo.toml  README.md
rdaku/src/: lib.rs
src/: dive.rs  future.rs  lib.rs  log.rs  main.rs  slice.rs  sr.rs  usb.rs
src/emu/: x86.rs
src/engine/: error.rs  mod.rs
src/parse/: mod.rs
swarf/: Cargo.toml
