[package]
name = "ardaku"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wasmer]
version = "2.0"
default-features = false
features = ["universal", "cranelift"]

[dependencies.flume]
version = "0.10"

[dependencies.pasts]
version = "0.8"

[dependencies.devout]
version = "0.2"
