[package]
name = "ardaku"
version = "0.1.0"
edition = "2021"
description = "WASM Environment"
license = "BSL-1.0"
documentation = "https://docs.rs/ardaku"
homepage = "https://ardaku.org"
repository = "https://github.com/ardaku/ardaku"

[dependencies.log]
version = "0.4"

[dependencies.wasmi]
version = "0.25"
default-features = false

[dev-dependencies]
env_logger = "0.10"
