[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/mod.rs"

[dependencies.log]
version = "0.4"

[dependencies.daku]
# git = "https://github.com/ardaku/daku.git"
# rev = "b27274187fcf2bb4897dd01188d5a9e80a64f6fd"
path = "../../daku"
features = ["log", "prompt"]
