[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/mod.rs"

[dependencies.log]
version = "0.4"

[dependencies.daku]
version = "0.3"
features = ["log", "prompt"]

[patch.crates-io]
daku = { path = "../../daku/" }

[profile.release]
panic = "abort"
opt-level = 's'
lto = true
debug = true
